# hmbp

./: .gitignore  CLAUDE.md  pyproject.toml
examples/: sample_pgfplots.py  sample_plots.py
hmbp/: __init__.py  fonts.py  pgfplots.py  plotting.py  quick.py
